--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- How to play -->
     <div class="container">
       <div class="how-to-play animate">
-        <2 class="title-text">🚀 How to Play</2>
+        <h2 class="title-text">🚀 How to Play</h2>
         <ol class="how-to-play-steps" type="1">
           <li>Guess the right combination of numbers</li>
           <li>Win <span class="bold-text">N3,000,000</span> instantly</li>
